# Brickhill-friend-bot-rust

./: .gitignore  Cargo.toml  README.md  build.nix  flake.nix
src/: main.rs
