[package]
name = "brickhill_friend_bot"
version = "0.6.0"
authors = ["ayes-web <ayes2022@protonmail.com>"]
edition = "2021"

[dependencies]
thirtyfour = "0.31"
tokio = "1.26"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
clap = { version = "4.1", features = ["derive"] }
ctrlc = "3.2"
spinners = "4.1"