[package]
name = "brickhill_friend_bot"
version = "0.5.0"
authors = ["Ayes <ayes2022@protonmail.com>"]
edition = "2021"

[dependencies]
thirtyfour = "0.29"
tokio = "1.19"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
clap = { version = "3.1", features = ["derive"] }
ctrlc = "3.2.2"
spinners = "4.0.0"