[package]
name = "brickhill_friend_bot"
version = "0.6.1"
authors = ["BatteredBunny <ayes2022@protonmail.com>"]
edition = "2021"

[dependencies]
thirtyfour = "0.31"
tokio = "1.35"
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
spinners = "4.1"